--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <section id="home">
         <image class="home__avatar" src="image/캥거루.jpg"></image>
         <div class="homeBtn__container">
-            <button class="btn" onclick="location.href='#'"><p>로그인</p></button>
-            <button class="btn" onclick="location.href='#'"><p>회원가입</p></button>
+            <button class="btn" onclick="location.href='login.html'"><p>로그인</p></button>
+            <button class="btn" onclick="location.href='join.html'"><p>회원가입</p></button>
         </div>
     </section>
 </body>
