--- a/join.html
+++ b/join.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="join.css">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
@@ -20,7 +20,8 @@
           <div class="form__group">
             <input type="text" placeholder="아이디" name="userID">
             <input type="password" placeholder="비밀번호" name="userPassword">
-            <input type="submit" value="로그인">
+            <input type="email" placeholder="이메일" name="userEmail">
+            <input type="submit" value="회원가입">
           </div>
         </form>
       </div>
